--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "concurrently": "^3.5.1",
     "jest": "^22.4.3",
     "nodemon": "^1.17.2"
+  },
+  "dependencies": {
+    "react": "^16.3.0",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.3.0"
   }
 }
