--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nodemon": "^1.17.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.16.3",
     "react": "^16.3.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.0"
